<resources>

    <string name="app_name">Online Parking System</string>

    <plurals name="price_label">
        <item quantity="one">Book for \u20B9%1$d for %2$d hr</item>
        <item quantity="other">Book for \u20B9%1$d for %2$d hrs</item>
    </plurals>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_settings">Settings</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="hint_parking_location_name">Enter Parking Location Name</string>
    <string name="hint_parking_available">Enter No. of Parking Available</string>
    <string name="btn_submit">Submit</string>
    <string name="err_internet">Internet not available. Please connect to the Internet.</string>
    <string name="loading">Loading</string>
    <string name="action_paid">Paid</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
